...
                    hintPanel
                        .padding(30.0)
                        .zIndex(Constants.zDialogs)
                        .transition(.offset(x: 0.0, y: geometry.size.height))
                        .accessibilityElement(children: .contain)
                        .accessibilityAddTraits(.isButton)
                        .accessibilityIdentifier("Hint_Panel")
                        .accessibilityLabel(hintPanelAccessibilityLabel)
                }
                if game.shouldDisplayEvaluationPanel {
                    setEvaluationPanel.transition(.offset(x: 0.0, y: geometry.size.height))
                        .padding(10.0)
                        .zIndex(Constants.zDialogs)
...
                            }
                        }
                    }).padding(4.0).zIndex(Constants.zDialogs)
                        .transition(.offset(x: 0.0, y: geometry.size.height))
                        .accessibilityElement(children: .contain)
                        .accessibilityAddTraits(.isButton)
                        .accessibilityIdentifier("About_Panel")
                        .accessibilityLabel("About Cards of Set")
                }
                if game.shouldDisplayHowToPanel {
                    HowToPlay(handler: {
                        withAnimation {
                            game.hideHowToPanel()
...
                        game.showHowToPanel()
                    }
                    game.hideEvaluationPanel()
                }
            })
        .accessibilityElement(children: .contain)
        .accessibilityIdentifier("Evaluation_Panel")
        .accessibilityLabel(game.isMatch ? "It's a Match!" : "Not a Match!")
    }
    
    private var settingsButton: some View {
        Button {
            withAnimation(.easeInOut(duration: panelDuration)) {
                game.showAboutPressed()
            }
        } label: {
            Label("Settings", systemImage: "gear")
        }
    }
    
    private var newGameButton: some View {
        Button {
            clearTableau()
...
            for card in game.cards {
                withAnimation(dealAnimation(forCard: card)) {
                    placeCardInTableau(card)
                }
            }
        } label: {
            Label("New Game", systemImage: "shuffle.circle")
        }
    }
    
    private var hintButton: some View {
        Button {
            withAnimation(.easeInOut(duration: panelDuration)) {
                game.showHintPanel()
            }
        } label: {
            Label("Hint", systemImage: "questionmark.circle")
        }
    }
    
    private func removeSelectedCardsAnimation() {
        let threeCardsToReplace = game.selectedCards
        for card in threeCardsToReplace {
...
                    game.dealThreeMorePressed()
                }
                newlyDealtCards = Array( game.cards.suffix(3) )
            }
            dealThreeAnimation(newlyDealtCards)
        } label: {
            Label("Deal 3", systemImage: "square.3.stack.3d")
        }
    }
    
    struct Constants {
        static let CardsAspect: CGFloat = 2/3
        static let EvalPanelRadius: CGSize = CGSize(width: 20, height: 20)
...
